# hsc

./: AUTHOR  CHANGES  Hmpf_Grmbl_Wrcks  IMPORTANT  Makefile.in  NEWS  README  README.docs  configure  configure.in  hsc-1.0.ebuild  hsc-Tschak  hsc-html-40.prefs  hsc.prefs  hsc.spec  macros.hsc  macros.readme
amigaos/: README.AmigaOS  SCOPTIONS  smakefile
docs-source/: CHANGES  Makefile  README  README.info  about.hsc  author.hsc  bugs.hsc  changes.hsc  copy.hsc  credits.hsc  cvpro.pl  distrib.hsc  envvar.hsc  errors.hsc  examples.hsc  fileargs.hsc  future.hsc  hsc.hsc  hsc.prefs  hsc.project  hsc.project_amiga  hscdoc.css  html2ps.config  index.hsc  install.hsc  main_index.hsc  makeimg  menu.hsc  message-list.hsc  messages.hsc  options.hsc  others.hsc  ports.hsc  questions.hsc  related.hsc  require.hsc  source.hsc  tedhsc.prj  teutsch.hsc  undocumented.hsc  (+2 more)
example/: README
grafflwerk/: CvtEntities  Gentoo-Makefile.patch  Makefile  README  SendAWeb.rexx  SendBrowser.rexx  SendScMsg.rexx  StripNastyChars.hsc  StripNastyChars.rexx  defent-cp1252.prefs  ent2c.pl  hScMsg.rexx  hscpaltrow.rexx  htmlhsc.vim  vietchar.hsc
src/: .deps  Makefile  Makefile.agi  Makefile.dodl  Makefile.in  README  README.info  SCOPTIONS  _new.h  args.c  args.h  args_set.c  cleanup.c  cleanup.h  config.c  config.h  config.h.in  dbg.prefs  debug.h  deftag.c  deftag.h  dllist.c  ent.prefs  entity.c  entity.h  error.c  error.h  eval.c  eval.h  find.c  find.h  gifsize.c  global.c  global.h  hsc.c  hsc.prefs  hsc093.prefs  infile.c  macro.c  macro.h  (+43 more)
starter-project/: Makefile  README  Welcome.hsc
test/: assign.html  autoclose.hsc  eval.expected  eval.msg  hsc-test.project  illgnest.hsc  illgnest.msg  macro.expected  macro.hsc  macro2.hsc  msg_macro.hsc  msg_macro.html  opt_getsize.expected  opt_getsize.hsc  opt_rplcent.html  optim_tag.hsc  redefine.hsc  sgmlspec.hsc  sgmlspec.html  stripws.expected  test.ilbm  test.jfif  unknattr.msg
test2/: 99bottles-iter.hsc  99bottles.hsc  README  arrays.hsc  autoclose.hsc  colors.hsc  css-patterns.hsc  docuri.hsc  dump  exturis.hsc  filedate.hsc  groups-ng.hsc  groups.hsc  hsc.options  hscexpr.pl  imgsize.hsc  perl.hsc  (+21 more)
(+324 files in other folders)
